<resources>
    <string name="app_name">BSRU Restaurant</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_order">OrderActivity</string>

    <string name="one">โต้ะหนึ่ง</string>
    <string name="two">โต้ะสอง</string>
    <string name="three">โต้ะสาม</string>
    <string name="four">โต้ะสี่</string>
    <string name="five">โต้ะห้า</string>
    <string name="six">โต้ะหก</string>
    <string name="seven">โต้ะเจ็ด</string>
    <string name="eight">โต้ะแปด</string>
    <string name="title_activity_list_desk">ListDeskActivity</string>


</resources>
